modules/ps_searchbar/ps_searchbar.css
#search_widget {
  margin-bottom: .625rem;
  overflow: auto;
}
#search_widget form {
  position: relative;
  display: flex;
  align-items: stretch;
}
#search_widget form i.clear {
  position: absolute;
  right: 50px;
  top: 50%;
  transform: translateY(-50%);
  padding: 0;
  display: none;
}
#search_widget form input[type="text"] {
  flex: 1;
  padding: 10px 40px 10px 12px;
  outline: none;
  background-color: #fff;
  border: 1px solid #ee7a03;
  border-right: none;
  border-radius: 0;
  color: #000;
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
}
#search_widget form input[type="text"]::placeholder {
  color: #b9b9b9;
}
#search_widget form .search-btn {
  border: 1px solid #ee7a03;
  border-left: none;
  background: url('/img/template/bt-rechercher.png') no-repeat center center;
  background-size: cover;
  width: 40px;
  padding: 0;
  margin: 0;
  cursor: pointer;
  border-radius: 0;
}

.ui-autocomplete.searchbar-autocomplete {
  width: 100%;
  min-height: 100%;
  border: none;
}

.ui-autocomplete.searchbar-autocomplete li a, .ui-autocomplete.searchbar-autocomplete li a.ui-state-focus {
  padding: 8px 15px;
  overflow: auto;
  border: none;
  background: none;
  margin: auto;
  border-radius: 0;
}

.ui-autocomplete.searchbar-autocomplete li a:hover {
  background-color: #f1f1f1;
  cursor: pointer;
}

.ui-autocomplete.searchbar-autocomplete li a .autocomplete-thumbnail {
  float: left;
  width: 50px;
  height: auto;
  margin-right: 8px;
}

@media only screen and (min-width: 768px) {
  #search_widget {
    float: right;
    margin-bottom: 0;
  }

  .ui-autocomplete.searchbar-autocomplete {
    width: 400px;
    min-height: auto;
    left: auto;
  }
}

@media only screen and (min-width: 992px) {
  #search_widget {
    min-width: 16.5rem;
  }
}

